--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,10 @@
 	<packaging>jar</packaging>
 
 	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.mainClass>de.leonhardt.sbm.gui.newGui.BackupManagerController</project.build.mainClass>
 	</properties>
 
 	<dependencies>
@@ -32,12 +35,12 @@
 		<dependency>
 			<groupId>org.beanfabrics</groupId>
 			<artifactId>beanfabrics-core</artifactId>
-			<version>1.3.0</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.beanfabrics</groupId>
 			<artifactId>beanfabrics-swing</artifactId>
-			<version>1.3.0</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -53,10 +56,6 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -65,6 +64,41 @@
 				<configuration>
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>${project.build.mainClass}</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>${project.build.mainClass}</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -81,7 +115,7 @@
 			<id>fkleon</id>
 			<name>Frederik Leonhardt</name>
 			<email>frederik.leonhardt@gmail.com</email>
-			<url>http://www.leonhardt.co.nz</url>
+			<url>https://www.leonhardt.co.nz</url>
 			<timezone>1</timezone>
 			<roles>
 				<role>architect</role>
@@ -95,7 +129,6 @@
 			<name>GNU Lesser General Public License, v3.0</name>
 			<url>https://www.gnu.org/licenses/lgpl.html</url>
 			<distribution>repo</distribution>
-			<comments>OSS license</comments>
 		</license>
 	</licenses>
 
