Adapts package structure in tests. Adds SmsBrConverter test. Adds test suite for SMS Backup and Restore modules. Fixes some code formatting issues.

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 				<configuration>
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
+					<includes>
+						<include>**/Test*.java</include>
+						<include>**/*Test.java</include>
+						<include>**/*TestSuite.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
