--- a/pom.xml
+++ b/pom.xml
@@ -20,27 +20,23 @@
 		<dependency>
 			<groupId>com.googlecode.libphonenumber</groupId>
 			<artifactId>libphonenumber</artifactId>
-			<version>6.0</version>
+			<version>7.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.libphonenumber</groupId>
 			<artifactId>geocoder</artifactId>
-			<version>2.9</version>
+			<version>2.18</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.beanfabrics</groupId>
+		    <artifactId>beanfabrics-swing</artifactId>
+		    <version>1.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.beanfabrics</groupId>
-			<artifactId>beanfabrics-core</artifactId>
-			<version>1.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.beanfabrics</groupId>
-			<artifactId>beanfabrics-swing</artifactId>
-			<version>1.3.0</version>
+			<version>3.3.2</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
