--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 		<!-- Workaround to be able to access build timestamp in resource filtering -->
 		<timestamp>${maven.build.timestamp}</timestamp>
 
-		<libphonenumber.version>7.4.5</libphonenumber.version>
-		<geocoder.version>2.47</geocoder.version>
-		<beanfabrics.version>1.4.3</beanfabrics.version>
-		<log4j.version>2.6.2</log4j.version>
+		<libphonenumber.version>8.13.55</libphonenumber.version>
+		<geocoder.version>2.249</geocoder.version>
+		<beanfabrics.version>1.5.0</beanfabrics.version>
+		<log4j.version>2.24.3</log4j.version>
 	</properties>
 
 	<dependencies>
@@ -36,18 +36,23 @@
 		</dependency>
 		<dependency>
 			<groupId>org.beanfabrics</groupId>
+			<artifactId>beanfabrics-core</artifactId>
+			<version>${beanfabrics.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.beanfabrics</groupId>
 			<artifactId>beanfabrics-swing</artifactId>
 			<version>${beanfabrics.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
+			<version>3.17.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.10</version>
+			<version>1.16.22</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -72,7 +77,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -88,12 +93,20 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.14.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.3.1</version>
+				<configuration>
+					<propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>3.5.3</version>
 				<configuration>
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
@@ -107,7 +120,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.7.1</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
